# FREESIA

./: README.md
MBP_input/: ref_chemical_shifts.list
pulse_sequences/: CCR_Params.incl  HNCA_COirr_FREESIA  HN_COirr
script/: README.md  cross_sections.py  figures.py  freesia.py  freq_list.py  parameters.py  peaks.py  pyproject.toml  reference_chem_shifts.py  residues.py  spectra.py  weighting.py
script/MBP_input/: fq1list  peak.list
